--- a/transaction-fraud-detection-cycle1.ipynb
+++ b/transaction-fraud-detection-cycle1.ipynb
@@ -45,7 +45,7 @@
     "hidden": true
    },
    "source": [
-    "Blocker Fraud Company is expanding in Brazil and to acquire customers more quickly, it has adopted a very aggressive strategy. The strategy works as follows:\n",
+    "Blocker Fraud Company and to acquire customers more quickly, it has adopted a very aggressive strategy. The strategy works as follows:\n",
     "1. The company will receive 25% of the value of each transaction that is truly detected as fraud.\n",
     "1. The company will receive 5% of the value of each transaction detected as fraud, but the transaction is truly legitimate.\n",
     "1. The company will return 100% of the value to the customer, for each transaction detected as legitimate, however the transaction is truly a fraud."
